--- a/Aftershock/ru.lproj/Localizable.strings
+++ b/Aftershock/ru.lproj/Localizable.strings
@@ -5,7 +5,7 @@
   Created by Anatoly Vdovichev on 21/04/2019.
   Copyright © 2019 ASVCorp. All rights reserved.
 */
-"Sysop name is not specified" = "Не установлено имя пользователя";
+"User name is not specified" = "Не установлено имя пользователя";
 "Sysop name is too long" = "Имя пользователя не должно быть длиннее 36 символов";
 "Station name is not specified" = "Не установлено название станции";
 "Station name is too long" = "Название станции не должно быть больше 64 символов";
